# bevy-xiangqi

./: Cargo.toml  Rocket.toml
server/src/: main.rs
transfer/: Cargo.toml
transfer/src/: lib.rs
xiangqi/: Cargo.toml
xiangqi/assets/: marker.png~
xiangqi/assets/r/: k.png~  n.png~
xiangqi/src/: lib.rs  main.rs  prelude.rs
xiangqi/src/components/: camera.rs  marker.rs  mod.rs  pieces.rs  win_lose.rs
xiangqi/src/menu/: content.rs  mod.rs
xiangqi/src/resources/: board.rs  connect.rs  control.rs  fonts.rs  images.rs  mod.rs  moves.rs  query.rs
xiangqi/src/status/: mod.rs  states.rs
xiangqi/src/types/: board.rs  error.rs  mod.rs  pieces.rs
